<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/main_layout" android:background="#e0f2f1" android:paddingTop="@dimen/activity_vertical_margin" android:layout_width="match_parent" android:layout_height="match_parent" android:fillViewport="true">
    <LinearLayout android:orientation="vertical" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="match_parent" android:layout_height="wrap_content">
        <android.support.design.widget.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/textInputlayoutStyle">
            <AutoCompleteTextView android:layout_gravity="center" android:id="@+id/edtuarnament" android:hint="Tournament/Series" android:layout_weight="1" style="@style/my_edit_text_style"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/textInputlayoutStyle">
            <AutoCompleteTextView android:layout_gravity="center" android:id="@+id/edtuarnamentStage" android:hint="Tournament Stage" android:layout_weight="1" style="@style/my_edit_text_style"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/textInputlayoutStyle">
            <AutoCompleteTextView android:id="@+id/edyourteam" android:hint="Batting Team Name" android:layout_weight="1" style="@style/my_edit_text_style"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/textInputlayoutStyle">
            <AutoCompleteTextView android:id="@+id/edopteam" android:hint="Bowling Team Name" android:layout_weight="1" style="@style/my_edit_text_style"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/textInputlayoutStyle">
            <AutoCompleteTextView android:id="@+id/ed_toss_won_by" android:focusable="false" android:hint="Toss Won By" android:layout_weight="1" style="@style/my_edit_text_style"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/textInputlayoutStyle">
            <AutoCompleteTextView android:id="@+id/edvenue" android:hint="Venue" android:layout_weight="1" style="@style/my_edit_text_style"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/textInputlayoutStyle">
            <AutoCompleteTextView android:id="@+id/ed_match_type" android:focusable="false" android:hint="Match Type" android:layout_weight="1" style="@style/my_edit_text_style"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout android:id="@+id/text_input_layout_overs" android:layout_width="match_parent" android:layout_height="wrap_content" style="@style/textInputlayoutStyle">
            <EditText android:id="@+id/editText" android:hint="Overs" android:layout_weight="1" android:inputType="number" android:imeOptions="actionDone" style="@style/my_edit_text_style"/>
        </android.support.design.widget.TextInputLayout>
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/radio_buttons_layout" android:visibility="gone" android:layout_width="match_parent" android:layout_height="@dimen/ed_height" android:layout_marginLeft="@dimen/ed_margin_left_right" android:layout_marginTop="@dimen/ed_margin_left_right" android:layout_marginRight="@dimen/ed_margin_left_right" android:layout_weight="1">
            <TextView android:textSize="15sp" android:textColor="@color/teal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/start_second_innings" android:fontFamily="@font/open_sans_bold"/>
            <RadioGroup android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/ed_margin_left_right">
                <RadioButton android:id="@+id/rb_yes" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/yes" android:layout_weight="1" style="@style/radio_button_style"/>
                <RadioButton android:textColor="@color/teal" android:id="@+id/rb_no" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/no" android:layout_weight="1" style="@style/radio_button_style"/>
            </RadioGroup>
        </LinearLayout>
        <Button android:id="@+id/bdetailsnext" android:layout_width="match_parent" android:layout_marginTop="25dp" android:text="Next" android:onClick="buttonClick" style="@style/my_button_style"/>
    </LinearLayout>
</ScrollView>
